--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,10 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- init: go get -v ./...
+- init: |
+   go get -v ./... &&
+   go run main.go build pkg/remotereporter:dev-init -c none -Dtarget=$PWD -v
+
 vscode:
   extensions:
     - zxh404.vscode-proto3@0.3.0:4f1jn72vQA2/LVoVSSmMtQ==
