Added version command

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,8 @@ before:
 builds:
 - env:
   - CGO_ENABLED=0
+  ldflags:
+  - -s -w -X github.com/typefox/leeway/cmd.version={{.Version}}-{{.ShortCommit}}
 archives:
 - replacements:
     darwin: Darwin
