[breaking] Replace per-package cache level with ephemeral packages
Ephemeral packages are packages which prepare the local environment.
They are not meant to be cached remotely, but also do not fail Typescript
package builds if they're in the transitive dependency list but aren't built
yet.
Basically, ephemeral packages are:
- never cached remotely
- always built when they're a direct dependency of a package that needs building
- do not fail TS builds when a transitive dependency and not built

--- a/BUILD.yaml
+++ b/BUILD.yaml
@@ -1,12 +1,20 @@
 const:
   foo: bar
 packages:
+- name: helloworld
+  type: generic
+  ephemeral: true
+  config:
+    commands:
+    - ["echo", "hello world"]
 - name: app
   type: go
   srcs:
   - "**/*.go"
   - go.mod
   - go.sum
+  deps:
+  - :helloworld
   argdeps:
   - version
   config:
