--- a/BUILD.yaml
+++ b/BUILD.yaml
@@ -26,8 +26,15 @@ packages:
     library: false
 scripts:
 - name: env
+  description: prints the environment variables of the script execution context
   deps:
   - :app
   script: |
     env
+- name: pwd
+  description: prints the current working directory of the script
+  workingdirLayout: packages
+  deps:
+  - :app
+  script: |
     pwd
