--- a/fixtures/scripts/BUILD.yaml
+++ b/fixtures/scripts/BUILD.yaml
@@ -6,14 +6,14 @@ scripts:
   script: |
     env
 - name: pwd-origin
-  workingdirLayout: origin
+  workdir: origin
   deps:
   - fixtures/pkgs/generic:something
   script: |
     pwd
     find .
 - name: pwd-packages
-  workingdirLayout: packages
+  workdir: packages
   deps:
   - fixtures/pkgs/generic:something
   script: |
