[experimental] Add basic experimental support for nested workspaces
Enable using the `LEEWAY_NESTED_WORKSPACE` environment variable.

--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -12,7 +12,7 @@
       "env": {
           "LEEWAY_EXPERIMENTAL": "true"
       },
-      "args": ["run", "//:hello"]
+      "args": ["collect"]
     }
   ]
 }
