Compute package hashes using the package's definition only,
instead of the entire component's `BUILD.yaml`.

Fixes TypeFox/leeway#9

--- a/BUILD.yaml
+++ b/BUILD.yaml
@@ -20,6 +20,7 @@ packages:
   prep:
   - ["echo", "hello prep"]
   config:
+    dontTest: true
     buildArgs:
     - -ldflags
     - -X main.version=${version}
