[describe] Add new dependency description command
that supports console tree prints, Graphviz and a web-rendered
dependency tree.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,4 +7,4 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- init: go get -v ./...
+- init: go get -v ./... && go generate -v ./...
