[fmt] Add `leeway fmt` to format BUILD.yaml files

--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -13,7 +13,7 @@
           "LEEWAY_EXPERIMENTAL": "true",
           "LEEWAY_NESTED_WORKSPACE": "true",
       },
-      "args": ["run", "-w", "fixtures/nested-ws", "wsa/pkg1:echo"]
+      "args": ["fmt", "fixtures/nested-ws/pkg0/BUILD.yaml"]
     }
   ]
 }
