[env-mf] Introduce an environment manifest to capture the build env
fixes https://github.com/TypeFox/leeway/issues/29

--- a/WORKSPACE.yaml
+++ b/WORKSPACE.yaml
@@ -1,6 +1,11 @@
 defaultTarget: "//:app"
 defaultArgs:
   version: dev
+environmentManifest:
+  - name: "node"
+    command: ["node", "--version"]
+  - name: "yarn"
+    command: ["yarn", "--version"]
 variants:
 - name: nogit
   srcs:
