--- a/.theia/launch.json
+++ b/.theia/launch.json
@@ -14,6 +14,14 @@
           "LEEWAY_NESTED_WORKSPACE": "true"
       },
       "args": ["fmt", "fixtures/nested-ws/pkg0/BUILD.yaml"]
+    },
+    {
+      "name": "stats collector",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceFolder}/extra/stats-collector/main.go",
+      "args": ["run", "/tmp/leeway-stats"]
     }
   ]
 }
