[gitpod] Add Go VS Code extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+
 checkoutLocation: leeway
 workspaceLocation: leeway
 
@@ -13,3 +14,7 @@ tasks:
 - init: |
     git config core.hooksPath .githooks;
     go get -v ./... && go generate -v ./...
+vscode:
+  extensions:
+    - golang.go
+    - eamodio.gitlens
