Add buildEnv support

--- a/fixtures/pkgs/generic/BUILD.yaml
+++ b/fixtures/pkgs/generic/BUILD.yaml
@@ -3,6 +3,8 @@ packages:
     type: generic
     srcs:
       - "*.txt"
+    buildEnv:
+      local: true
     config:
       commands:
         - ["echo"]
