--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,10 +1,7 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
 before:
   hooks:
-    # you may remove this if you don't use vgo
-    - go mod tidy
-    # you may remove this if you don't need go generate
+    - go install github.com/GeertJohan/go.rice/rice
+    - go mod download
     - go generate ./...
 builds:
 - env:
@@ -13,7 +10,7 @@ builds:
   - -s -w -X github.com/gitpod-io/leeway/pkg/leeway.Version={{.Version}}-{{.ShortCommit}}
   ignore:
   - goos: darwin
-    
+
 archives:
 - replacements:
     darwin: Darwin
