Exclude tracker from main build

--- a/BUILD.yaml
+++ b/BUILD.yaml
@@ -10,7 +10,9 @@ packages:
   - name: app
     type: go
     srcs:
-      - "**/*.go"
+      - "*.go"
+      - "cmd/**/*.go"
+      - "pkg/**/*.go"
       - "**/*.html"
       - "**/*.js"
       - go.mod
