--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,21 +1,27 @@
+version: 2
+
 before:
   hooks:
     - go generate ./...
+
 builds:
   - env:
       - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
     ldflags:
       - -s -w -X github.com/gitpod-io/leeway/pkg/leeway.Version={{.Version}}-{{.ShortCommit}}
 
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      amd64: x86_64
-checksum:
-  name_template: "checksums.txt"
-snapshot:
-  name_template: "{{ .Tag }}-next"
+  - format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+
 changelog:
   sort: asc
   filters:
