Remove Gitpod setup in favor of DevContainer setup

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "leeway",
 	"build": {
 		"context": "..",
-		"dockerfile": "../.gitpod.Dockerfile"
+		"dockerfile": "Dockerfile"
 	},
 	"runArgs": [
 		"--privileged",
