--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -50,3 +50,11 @@ RUN go install -v github.com/uudashr/gopkgs/cmd/gopkgs@v2 \
 ENV SHFMT_VERSION=3.10.0
 RUN curl -sSL -o /usr/local/bin/shfmt "https://github.com/mvdan/sh/releases/download/v${SHFMT_VERSION}/shfmt_v${SHFMT_VERSION}_linux_amd64" && \
     chmod 755 /usr/local/bin/shfmt
+
+# Install latest Leeway release
+RUN . /tmp/go_platform.env && \
+    LATEST_LEEWAY_VERSION=$(curl -s https://api.github.com/repos/gitpod-io/leeway/releases/latest | grep '"tag_name"' | sed 's/.*"tag_name": "v\([^"]*\)".*/\1/') && \
+    curl -L -o /tmp/leeway.tar.gz https://github.com/gitpod-io/leeway/releases/download/v${LATEST_LEEWAY_VERSION}/leeway_Linux_${GO_PLATFORM#linux-}.tar.gz && \
+    tar -xzf /tmp/leeway.tar.gz -C /tmp && \
+    install -m 755 /tmp/leeway /usr/local/bin/ && \
+    rm /tmp/leeway.tar.gz
