--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,32 @@
 		"context": "..",
 		"dockerfile": "Dockerfile"
 	},
+	"features": {
+		"ghcr.io/devcontainers/features/node:1": {
+			"version": "lts",
+			"nodeGypDependencies": true,
+			"yarn": true
+		},
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.24.0"
+		},
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": false,
+			"configureZshAsDefaultShell": false,
+			"username": "root",
+			"upgradePackages": true
+		},
+		"ghcr.io/devcontainers-contrib/features/curl-apt-get:1": {},
+		"ghcr.io/devcontainers-contrib/features/jq-apt-get:1": {},
+		"ghcr.io/devcontainers-contrib/features/shfmt:1": {
+			"version": "3.10.0"
+		}
+	},
 	"runArgs": [
 		"--privileged",
 		"--security-opt=seccomp=unconfined",
 		"--network=host"
 	],
-	"containerUser": "root"
+	"containerUser": "root",
+	"postCreateCommand": "go install -v github.com/uudashr/gopkgs/cmd/gopkgs@v2 && go install -v github.com/ramya-rao-a/go-outline@latest && go install -v github.com/cweill/gotests/gotests@latest && go install -v github.com/fatih/gomodifytags@latest && go install -v github.com/josharian/impl@latest && go install -v github.com/haya14busa/goplay/cmd/goplay@latest && go install -v github.com/go-delve/delve/cmd/dlv@latest && go install -v github.com/golangci/golangci-lint/cmd/golangci-lint@latest && go install -v golang.org/x/tools/gopls@latest && go install -v honnef.co/go/tools/cmd/staticcheck@latest"
 }
