Fix devcontainer configuration drift
- Remove inaccessible shfmt feature that was causing build failures
- Specify exact runtime versions (Go 1.24, Node 18) for consistency
- Move leeway installation from postStartCommand to Dockerfile for proper global dependency management
- Add port forwarding configuration (8080, 3000, 9000) with descriptions
- Create comprehensive automations file with development workflows:
  - install-deps: Download Go dependencies (auto-triggered)
  - build-leeway: Build main application (manual)
  - test: Run Go tests (manual)
  - lint: Run linter if available (manual)
- Remove obsolete install-leeway.sh script

Fixes dev container build failure and establishes proper development environment
following Gitpod development setup guidelines.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,32 @@
 {
 	"name": "leeway",
-	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
-	"features": {
-		"ghcr.io/devcontainers/features/node:1": {},
-		"ghcr.io/devcontainers/features/go:1": {},
-		"ghcr.io/devcontainers/features/common-utils:2": {},
-		"ghcr.io/devcontainers-contrib/features/shfmt:1": {
-			"version": "3.10.0"
-		},
-		"ghcr.io/dhoeric/features/google-cloud-cli:1": {},
-		"ghcr.io/devcontainers/features/aws-cli:1": {},
+	"build": {
+		"dockerfile": "Dockerfile"
 	},
-	"postStartCommand": "./.devcontainer/install-leeway.sh"
+	"features": {
+		"ghcr.io/devcontainers/features/node:1": {
+			"version": "18"
+		},
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.24"
+		},
+		"ghcr.io/devcontainers/features/common-utils:2": {},
+		"ghcr.io/dhoeric/features/google-cloud-cli:1": {},
+		"ghcr.io/devcontainers/features/aws-cli:1": {}
+	},
+	"forwardPorts": [8080, 3000, 9000],
+	"portsAttributes": {
+		"8080": {
+			"label": "Application Server",
+			"onAutoForward": "notify"
+		},
+		"3000": {
+			"label": "Development Server",
+			"onAutoForward": "notify"
+		},
+		"9000": {
+			"label": "Debug Server",
+			"onAutoForward": "notify"
+		}
+	}
 }
