fix(ci): add -v flag to show determinism verification output
Without -v flag, test output (t.Logf) doesn't print, so grep finds nothing
and the verification step shows empty output.

With -v flag, the test output is visible and we can see the checksums:
  ✅ Deterministic builds verified: 9e873bb24a42cb838f09019e402f515a97427e7764a3fb63739318bf76e329ec

Also improved error handling to show a message if test is cached or fails.

Co-authored-by: Ona <no-reply@ona.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -54,7 +54,7 @@ jobs:
           echo "=== Verifying deterministic builds ==="
           for i in 1 2 3; do
             echo "Run $i:"
-            go test -tags=integration ./pkg/leeway \
+            go test -tags=integration -v ./pkg/leeway \
               -run TestDockerPackage_OCILayout_Determinism_Integration \
-              -timeout 5m 2>&1 | grep "Deterministic builds verified" || true
+              -timeout 5m 2>&1 | grep "Deterministic builds verified" || echo "  (test may have been cached or failed)"
           done
