feat: add docker-in-docker to devcontainer
Enable Docker support in the development container for building and
testing Docker packages.

Co-authored-by: Ona <no-reply@ona.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,11 @@
 		"ghcr.io/devcontainers/features/go:1": {
 			"version": "1.24"
 		},
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest",
+			"moby": true,
+			"dockerDashComposeVersion": "v2"
+		},
 		"ghcr.io/devcontainers/features/common-utils:2": {},
 		"ghcr.io/dhoeric/features/google-cloud-cli:1": {},
 		"ghcr.io/devcontainers/features/aws-cli:1": {}
